--- a/customer-service.html
+++ b/customer-service.html
@@ -194,7 +194,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 p-2">
                     <div class="headTitle d-flex flex-column align-items-center justify-content-center gap-2 mb-5">
-                        <p>
+                        <p class="text-center">
                             يرجى اختيار احد ممثلي خدمة العملاء لمواصلة إتمام التعاقد واكمال الإستقدام
                         </p>
                     </div>
@@ -203,27 +203,33 @@
                             <div class="customerOption " data-aos=" fade-up">
                                 <input type="radio" class="btn-check" name="customer" id="option1">
                                 <label class="btn btn-outline" for="option1">
-                                    <img src="assets/images/avater2.webp" alt="">
+                                    <span class="img-cs">
+                                        <img src="assets/images/cs.svg" alt="">
+                                    </span>
                                     <span> أ.منار </span>
                                 </label>
                             </div>
                             <div class="customerOption " data-aos=" fade-up">
                                 <input type="radio" class="btn-check" name="customer" id="option2">
                                 <label class="btn btn-outline" for="option2">
-                                    <img src="assets/images/avater2.webp" alt="">
+                                    <span class="img-cs">
+                                        <img src="assets/images/cs.svg" alt="">
+                                    </span>
                                     <span> أ.عبدالعزيز </span>
                                 </label>
                             </div>
                             <div class="customerOption " data-aos=" fade-up">
                                 <input type="radio" class="btn-check" name="customer" id="option3">
                                 <label class="btn btn-outline" for="option3">
-                                    <img src="assets/images/avater2.webp" alt="">
+                                    <span class="img-cs">
+                                        <img src="assets/images/cs.svg" alt="">
+                                    </span>
                                     <span> أ.أسماء </span>
                                 </label>
                             </div>
                         </div>
                         <div class=" pt-4 p-2 text-center mt-4">
-                            <button type="submit" class="btn btn-dark w-25 animatedLink">
+                            <button type="submit" class="btn btn-primary w-25 animatedLink">
                                 تأكيد
                             </button>
                         </div>
@@ -244,7 +250,6 @@
             <li>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
             </li>
-            
             <li>
                 <a href="#"><i class="fa-brands fa-youtube"></i></a>
             </li>
