--- a/cv-details.html
+++ b/cv-details.html
@@ -238,6 +238,11 @@
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
                                         <div class="product-thumb rounded cursor-pointer">
+                                            <img src="assets/images/workers/cv2.png" alt="" class="img-fluid" />
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="product-thumb rounded cursor-pointer">
                                             <img src="assets/images/workers/7.jpg" alt="" class="img-fluid" />
                                         </div>
                                     </div>
@@ -257,6 +262,11 @@
                                 </div>
                                 <div class="swiper productSwiper2">
                                     <div class="swiper-wrapper">
+                                        <div class="swiper-slide ">
+                                            <a data-fancybox="CV1" href="assets/images/workers/cv2.png">
+                                                <img src="assets/images/workers/cv2.png" alt="">
+                                            </a>
+                                        </div>
                                         <div class="swiper-slide ">
                                             <a data-fancybox="CV1" href="assets/images/workers/7.jpg">
                                                 <img src="assets/images/workers/7.jpg" alt="">
@@ -278,7 +288,18 @@
                 <div class="col-lg-5 ms-auto">
                     <div class="ecommerce-product-widgets mt-4 mt-lg-0">
                         <div class="mb-4">
-                            <h4 class="lh-base mb-4"> باسيليو براندو </h4>
+                            <h4 class="lh-base mb-4 d-flex justify-content-between ">
+                                <span>باسيليو براندو </span> 
+                                <div>
+                                    <button class="fav-add" title="اضافه الى المفضله">
+                                    <i class="fa-sharp fa-regular fa-heart"></i> 
+                                </button>
+                                    <button class="fav-add" title="مشاركة السيرة الذاتية">
+                                        <i class="fa-sharp fa-solid fa-share"></i> 
+                                </button>
+                                </div>
+                                
+                            </h4>
                             <div class="row">
                                 <div class="col-6 p-2 d-flex align-items-center gap-2">
                                     <i class="fa-regular fa-sparkles fs-16 text-success"></i>
@@ -330,6 +351,10 @@
                                     <a href="customer-service.html" class="btn btn-primary btn-hover w-100">
                                         <i class="fa-light fa-briefcase me-2"></i>
                                         طلب استقدام
+                                    </a>
+                                    <a href="cv.html" download="" class="btn btn-primary btn-hover w-100">
+                                        <i class="fa-light fa-file-arrow-down me-2"></i>
+                                        تنزيل السيره الذاتيه
                                     </a>
                                 </div>
                             </div>
@@ -448,120 +473,109 @@
                 <div class="col-xxl-3 col-lg-4 col-sm-6">
                     <a href="cv-details.html" class="cv">
                         <div class="imgall">
-                            <img src="assets/images/workers/3.jpg" alt="">
-                        </div>
-                        <div class="mainInfo mt-3">
-                            <h4> تحيه على الحمدون </h4>
-                            <div class="age"><span>32</span> سنة</div>
-                        </div>
-                        <div class="subInfo">
-                            <div class="sub">
-                                <p>الجنسية</p>
-                                <h6>هنديه</h6>
-                            </div>
-                            <div class="sub">
-                                <p>المهنة</p>
-                                <h6> مربيه اطفال </h6>
-                            </div>
-                            <div class="sub">
-                                <p>الديانة</p>
-                                <h6>مسلمة</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الحالة الاجتماعية</p>
-                                <h6>متزوجة</h6>
+                            <img src="assets/images/workers/cv.png" alt="">
+                            <div class="buttons">
+                                <ul>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-regular fa-heart"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-solid fa-share"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-light fa-download"></i>
+                                        </button>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <span class="more btn ">عرض التفاصيل</span>
+                        <span class="more btn mt-4">عرض التفاصيل</span>
                     </a>
                 </div>
                 <div class="col-xxl-3 col-lg-4 col-sm-6">
                     <a href="cv-details.html" class="cv">
                         <div class="imgall">
-                            <img src="assets/images/workers/4.jpg" alt="">
-                        </div>
-                        <div class="mainInfo mt-3">
-                            <h4>نورة سعد الدين</h4>
-                            <div class="age"><span>26</span> سنة</div>
-                        </div>
-                        <div class="subInfo">
-                            <div class="sub">
-                                <p>الجنسية</p>
-                                <h6>كينيه</h6>
-                            </div>
-                            <div class="sub">
-                                <p>المهنة</p>
-                                <h6>ساحره</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الديانة</p>
-                                <h6>مسلمة</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الحالة الاجتماعية</p>
-                                <h6>متزوجة</h6>
+                            <img src="assets/images/workers/cv.png" alt="">
+                            <div class="buttons">
+                                <ul>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-regular fa-heart"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-solid fa-share"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-light fa-download"></i>
+                                        </button>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <span class="more btn ">عرض التفاصيل</span>
+                        <span class="more btn mt-4">عرض التفاصيل</span>
                     </a>
                 </div>
                 <div class="col-xxl-3 col-lg-4 col-sm-6">
                     <a href="cv-details.html" class="cv">
                         <div class="imgall">
-                            <img src="assets/images/workers/5.jpg" alt="">
-                        </div>
-                        <div class="mainInfo mt-3">
-                            <h4> رقيه توفيق مجدى </h4>
-                            <div class="age"> <span> 24</span> سنة </div>
-                        </div>
-                        <div class="subInfo">
-                            <div class="sub">
-                                <p> الجنسية </p>
-                                <h6> فلبينيه </h6>
-                            </div>
-                            <div class="sub">
-                                <p> المهنة </p>
-                                <h6> عاملة منزلية </h6>
-                            </div>
-                            <div class="sub">
-                                <p> الديانة </p>
-                                <h6> مسلمة </h6>
-                            </div>
-                            <div class="sub">
-                                <p> الحالة الاجتماعية </p>
-                                <h6> عزباء </h6>
+                            <img src="assets/images/workers/cv.png" alt="">
+                            <div class="buttons">
+                                <ul>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-regular fa-heart"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-solid fa-share"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-light fa-download"></i>
+                                        </button>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <span class="more btn "> عرض التفاصيل </span>
+                        <span class="more btn mt-4">عرض التفاصيل</span>
                     </a>
                 </div>
                 <div class="col-xxl-3 col-lg-4 col-sm-6">
                     <a href="cv-details.html" class="cv">
                         <div class="imgall">
-                            <img src="assets/images/workers/6.jpg" alt="">
+                            <img src="assets/images/workers/cv.png" alt="">
+                            <div class="buttons">
+                                <ul>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-regular fa-heart"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-solid fa-share"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-light fa-download"></i>
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="mainInfo mt-3">
-                            <h4>عائشة محمد صالح</h4>
-                            <div class="age"><span>28</span> سنة</div>
-                        </div>
-                        <div class="subInfo">
-                            <div class="sub">
-                                <p>الجنسية</p>
-                                <h6>مصرية</h6>
-                            </div>
-                            <div class="sub">
-                                <p>المهنة</p>
-                                <h6>مربيه اطفال</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الديانة</p>
-                                <h6>مسلمة</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الحالة الاجتماعية</p>
-                                <h6>متزوجة</h6>
-                            </div>
-                        </div> <span class="more btn ">عرض التفاصيل</span>
+                        <span class="more btn mt-4">عرض التفاصيل</span>
                     </a>
                 </div>
             </div>
@@ -579,7 +593,6 @@
             <li>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
             </li>
-            
             <li>
                 <a href="#"><i class="fa-brands fa-youtube"></i></a>
             </li>
