--- a/index.html
+++ b/index.html
@@ -615,179 +615,163 @@
                 <div class="col-lg-4 p-2">
                     <a href="cv-details.html" class="cv">
                         <div class="imgall">
-                            <img src="assets/images/workers/1.jpg" alt="">
-                        </div>
-                        <div class="mainInfo mt-3">
-                            <h4>خديجه مجدى</h4>
-                            <div class="age"> <span> 24</span> سنة </div>
-                        </div>
-                        <div class="subInfo">
-                            <div class="sub">
-                                <p> الجنسية </p>
-                                <h6> سودانيه </h6>
-                            </div>
-                            <div class="sub">
-                                <p> المهنة </p>
-                                <h6> عامله منزليه </h6>
-                            </div>
-                            <div class="sub">
-                                <p> الديانة </p>
-                                <h6> مسلمة </h6>
-                            </div>
-                            <div class="sub">
-                                <p> الحالة الاجتماعية </p>
-                                <h6> أعزب </h6>
+                            <img src="assets/images/workers/cv.png" alt="">
+                            <div class="buttons">
+                                <ul>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-regular fa-heart"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-solid fa-share"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-light fa-download"></i>
+                                        </button>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <span class="more btn "> عرض التفاصيل </span>
+                        <span class="more btn mt-4"> عرض التفاصيل </span>
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
                     <a href="cv-details.html" class="cv">
                         <div class="imgall">
-                            <img src="assets/images/workers/2.jpg" alt="">
+                            <img src="assets/images/workers/cv.png" alt="">
+                            <div class="buttons">
+                                <ul>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-regular fa-heart"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-solid fa-share"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-light fa-download"></i>
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="mainInfo mt-3">
-                            <h4>عائشة محمد صالح</h4>
-                            <div class="age"><span>28</span> سنة</div>
-                        </div>
-                        <div class="subInfo">
-                            <div class="sub">
-                                <p>الجنسية</p>
-                                <h6>نيجيريه</h6>
-                            </div>
-                            <div class="sub">
-                                <p>المهنة</p>
-                                <h6>طباخه</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الديانة</p>
-                                <h6>مسلمة</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الحالة الاجتماعية</p>
-                                <h6>متزوجة</h6>
-                            </div>
-                        </div> <span class="more btn ">عرض التفاصيل</span>
+                        <span class="more btn mt-4"> عرض التفاصيل </span>
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
                     <a href="cv-details.html" class="cv">
                         <div class="imgall">
-                            <img src="assets/images/workers/3.jpg" alt="">
-                        </div>
-                        <div class="mainInfo mt-3">
-                            <h4> تحيه على الحمدون </h4>
-                            <div class="age"><span>32</span> سنة</div>
-                        </div>
-                        <div class="subInfo">
-                            <div class="sub">
-                                <p>الجنسية</p>
-                                <h6>هنديه</h6>
-                            </div>
-                            <div class="sub">
-                                <p>المهنة</p>
-                                <h6> مربيه اطفال </h6>
-                            </div>
-                            <div class="sub">
-                                <p>الديانة</p>
-                                <h6>مسلمة</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الحالة الاجتماعية</p>
-                                <h6>متزوجة</h6>
+                            <img src="assets/images/workers/cv.png" alt="">
+                            <div class="buttons">
+                                <ul>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-regular fa-heart"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-solid fa-share"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-light fa-download"></i>
+                                        </button>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <span class="more btn ">عرض التفاصيل</span>
+                        <span class="more btn mt-4"> عرض التفاصيل </span>
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
                     <a href="cv-details.html" class="cv">
                         <div class="imgall">
-                            <img src="assets/images/workers/4.jpg" alt="">
-                        </div>
-                        <div class="mainInfo mt-3">
-                            <h4>نورة سعد الدين</h4>
-                            <div class="age"><span>26</span> سنة</div>
-                        </div>
-                        <div class="subInfo">
-                            <div class="sub">
-                                <p>الجنسية</p>
-                                <h6>كينيه</h6>
-                            </div>
-                            <div class="sub">
-                                <p>المهنة</p>
-                                <h6>ساحره</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الديانة</p>
-                                <h6>مسلمة</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الحالة الاجتماعية</p>
-                                <h6>متزوجة</h6>
+                            <img src="assets/images/workers/cv.png" alt="">
+                            <div class="buttons">
+                                <ul>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-regular fa-heart"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-solid fa-share"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-light fa-download"></i>
+                                        </button>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <span class="more btn ">عرض التفاصيل</span>
+                        <span class="more btn mt-4"> عرض التفاصيل </span>
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
                     <a href="cv-details.html" class="cv">
                         <div class="imgall">
-                            <img src="assets/images/workers/5.jpg" alt="">
-                        </div>
-                        <div class="mainInfo mt-3">
-                            <h4> رقيه توفيق مجدى </h4>
-                            <div class="age"> <span> 24</span> سنة </div>
-                        </div>
-                        <div class="subInfo">
-                            <div class="sub">
-                                <p> الجنسية </p>
-                                <h6> فلبينيه </h6>
-                            </div>
-                            <div class="sub">
-                                <p> المهنة </p>
-                                <h6> عاملة منزلية </h6>
-                            </div>
-                            <div class="sub">
-                                <p> الديانة </p>
-                                <h6> مسلمة </h6>
-                            </div>
-                            <div class="sub">
-                                <p> الحالة الاجتماعية </p>
-                                <h6> عزباء </h6>
+                            <img src="assets/images/workers/cv.png" alt="">
+                            <div class="buttons">
+                                <ul>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-regular fa-heart"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-solid fa-share"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-light fa-download"></i>
+                                        </button>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <span class="more btn "> عرض التفاصيل </span>
+                        <span class="more btn mt-4"> عرض التفاصيل </span>
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
                     <a href="cv-details.html" class="cv">
                         <div class="imgall">
-                            <img src="assets/images/workers/6.jpg" alt="">
+                            <img src="assets/images/workers/cv.png" alt="">
+                            <div class="buttons">
+                                <ul>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-regular fa-heart"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-solid fa-share"></i>
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button>
+                                            <i class="fa-sharp fa-light fa-download"></i>
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="mainInfo mt-3">
-                            <h4>عائشة محمد صالح</h4>
-                            <div class="age"><span>28</span> سنة</div>
-                        </div>
-                        <div class="subInfo">
-                            <div class="sub">
-                                <p>الجنسية</p>
-                                <h6>مصرية</h6>
-                            </div>
-                            <div class="sub">
-                                <p>المهنة</p>
-                                <h6>مربيه اطفال</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الديانة</p>
-                                <h6>مسلمة</h6>
-                            </div>
-                            <div class="sub">
-                                <p>الحالة الاجتماعية</p>
-                                <h6>متزوجة</h6>
-                            </div>
-                        </div> <span class="more btn ">عرض التفاصيل</span>
+                        <span class="more btn mt-4"> عرض التفاصيل </span>
                     </a>
                 </div>
             </div>
@@ -858,7 +842,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="d-flex flex-column gap-3 flex-md-row align-items-center ">
-                        <h2 class="text-white text-capitalize mb-0 flex-grow-1"> كيف يمكننا مساعدتك </h2>
+                        <h2 class="text-white text-capitalize mb-0 flex-grow-1"> كيف يمكننا مساعدتك فى اختيار عاملتك.
+                        </h2>
                         <div class="flex-shrink-0 mt-3 mt-sm-0">
                             <a href="contact-us.html" class="btn btn-darken-secondary btn-hover"><i
                                     class="ph-phone align-middle me-1"></i> تواصل معنا </a>
