--- a/recruitment-request.html
+++ b/recruitment-request.html
@@ -486,182 +486,166 @@
                         <i class="ri-search-line search-icon"></i>
                     </div>
                     <div class="row filterpagecs">
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-6 col-sm-6">
                             <a href="cv-details.html" class="cv">
                                 <div class="imgall">
                                     <img src="assets/images/workers/cv.png" alt="">
-                                </div>
-                                <div class="mainInfo mt-3">
-                                    <h4>خديجه مجدى</h4>
-                                    <div class="age"> <span> 24</span> سنة </div>
-                                </div>
-                                <div class="subInfo">
-                                    <div class="sub">
-                                        <p> الجنسية </p>
-                                        <h6> سودانيه </h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p> المهنة </p>
-                                        <h6> عامله منزليه </h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p> الديانة </p>
-                                        <h6> مسلمة </h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p> الحالة الاجتماعية </p>
-                                        <h6> أعزب </h6>
+                                    <div class="buttons">
+                                        <ul>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-regular fa-heart"></i>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-solid fa-share"></i>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-light fa-download"></i>
+                                                </button>
+                                            </li>
+                                        </ul>
                                     </div>
                                 </div>
-                                <span class="more btn "> عرض التفاصيل </span>
+                                <span class="more btn mt-4"> عرض التفاصيل </span>
                             </a>
                         </div>
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-6 col-sm-6">
                             <a href="cv-details.html" class="cv">
                                 <div class="imgall">
-                                    <img src="assets/images/workers/2.jpg" alt="">
+                                    <img src="assets/images/workers/cv.png" alt="">
+                                    <div class="buttons">
+                                        <ul>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-regular fa-heart"></i>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-solid fa-share"></i>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-light fa-download"></i>
+                                                </button>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="mainInfo mt-3">
-                                    <h4>عائشة محمد صالح</h4>
-                                    <div class="age"><span>28</span> سنة</div>
-                                </div>
-                                <div class="subInfo">
-                                    <div class="sub">
-                                        <p>الجنسية</p>
-                                        <h6>نيجيريه</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>المهنة</p>
-                                        <h6>طباخه</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>الديانة</p>
-                                        <h6>مسلمة</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>الحالة الاجتماعية</p>
-                                        <h6>متزوجة</h6>
-                                    </div>
-                                </div> <span class="more btn ">عرض التفاصيل</span>
+                                <span class="more btn mt-4"> عرض التفاصيل </span>
                             </a>
                         </div>
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-6 col-sm-6">
                             <a href="cv-details.html" class="cv">
                                 <div class="imgall">
-                                    <img src="assets/images/workers/3.jpg" alt="">
-                                </div>
-                                <div class="mainInfo mt-3">
-                                    <h4> تحيه على الحمدون </h4>
-                                    <div class="age"><span>32</span> سنة</div>
-                                </div>
-                                <div class="subInfo">
-                                    <div class="sub">
-                                        <p>الجنسية</p>
-                                        <h6>هنديه</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>المهنة</p>
-                                        <h6> مربيه اطفال </h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>الديانة</p>
-                                        <h6>مسلمة</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>الحالة الاجتماعية</p>
-                                        <h6>متزوجة</h6>
+                                    <img src="assets/images/workers/cv.png" alt="">
+                                    <div class="buttons">
+                                        <ul>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-regular fa-heart"></i>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-solid fa-share"></i>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-light fa-download"></i>
+                                                </button>
+                                            </li>
+                                        </ul>
                                     </div>
                                 </div>
-                                <span class="more btn ">عرض التفاصيل</span>
+                                <span class="more btn mt-4"> عرض التفاصيل </span>
                             </a>
                         </div>
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-6 col-sm-6">
                             <a href="cv-details.html" class="cv">
                                 <div class="imgall">
-                                    <img src="assets/images/workers/4.jpg" alt="">
-                                </div>
-                                <div class="mainInfo mt-3">
-                                    <h4>نورة سعد الدين</h4>
-                                    <div class="age"><span>26</span> سنة</div>
-                                </div>
-                                <div class="subInfo">
-                                    <div class="sub">
-                                        <p>الجنسية</p>
-                                        <h6>كينيه</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>المهنة</p>
-                                        <h6>ساحره</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>الديانة</p>
-                                        <h6>مسلمة</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>الحالة الاجتماعية</p>
-                                        <h6>متزوجة</h6>
+                                    <img src="assets/images/workers/cv.png" alt="">
+                                    <div class="buttons">
+                                        <ul>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-regular fa-heart"></i>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-solid fa-share"></i>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-light fa-download"></i>
+                                                </button>
+                                            </li>
+                                        </ul>
                                     </div>
                                 </div>
-                                <span class="more btn ">عرض التفاصيل</span>
+                                <span class="more btn mt-4"> عرض التفاصيل </span>
                             </a>
                         </div>
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-6 col-sm-6">
                             <a href="cv-details.html" class="cv">
                                 <div class="imgall">
-                                    <img src="assets/images/workers/5.jpg" alt="">
-                                </div>
-                                <div class="mainInfo mt-3">
-                                    <h4> رقيه توفيق مجدى </h4>
-                                    <div class="age"> <span> 24</span> سنة </div>
-                                </div>
-                                <div class="subInfo">
-                                    <div class="sub">
-                                        <p> الجنسية </p>
-                                        <h6> فلبينيه </h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p> المهنة </p>
-                                        <h6> عاملة منزلية </h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p> الديانة </p>
-                                        <h6> مسلمة </h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p> الحالة الاجتماعية </p>
-                                        <h6> عزباء </h6>
+                                    <img src="assets/images/workers/cv.png" alt="">
+                                    <div class="buttons">
+                                        <ul>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-regular fa-heart"></i>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-solid fa-share"></i>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-light fa-download"></i>
+                                                </button>
+                                            </li>
+                                        </ul>
                                     </div>
                                 </div>
-                                <span class="more btn "> عرض التفاصيل </span>
+                                <span class="more btn mt-4"> عرض التفاصيل </span>
                             </a>
                         </div>
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-6 col-sm-6">
                             <a href="cv-details.html" class="cv">
                                 <div class="imgall">
-                                    <img src="assets/images/workers/6.jpg" alt="">
+                                    <img src="assets/images/workers/cv.png" alt="">
+                                    <div class="buttons">
+                                        <ul>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-regular fa-heart"></i>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-solid fa-share"></i>
+                                                </button>
+                                            </li>
+                                            <li>
+                                                <button>
+                                                    <i class="fa-sharp fa-light fa-download"></i>
+                                                </button>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="mainInfo mt-3">
-                                    <h4>عائشة محمد صالح</h4>
-                                    <div class="age"><span>28</span> سنة</div>
-                                </div>
-                                <div class="subInfo">
-                                    <div class="sub">
-                                        <p>الجنسية</p>
-                                        <h6>مصرية</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>المهنة</p>
-                                        <h6>مربيه اطفال</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>الديانة</p>
-                                        <h6>مسلمة</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>الحالة الاجتماعية</p>
-                                        <h6>متزوجة</h6>
-                                    </div>
-                                </div> <span class="more btn ">عرض التفاصيل</span>
+                                <span class="more btn mt-4"> عرض التفاصيل </span>
                             </a>
                         </div>
                     </div>
@@ -703,7 +687,7 @@
             <li>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
             </li>
-            
+
             <li>
                 <a href="#"><i class="fa-brands fa-youtube"></i></a>
             </li>
