--- a/confirmation.html
+++ b/confirmation.html
@@ -243,7 +243,7 @@
                                     <div class="row ">
                                         <div class="col-6 p-1 " data-aos=" fade-up">
                                             <div class="info">
-                                                <img src="assets/images/avater2.webp" alt="">
+                                                <img src="assets/images/cs.svg" alt="">
                                                 <div class="text">
                                                     <h5> أ.منار </h5>
                                                     <p>خدمة العملاء</p>
